# kubot2_ros

./: README.md  kubot_add_upstart.sh  kubot_init_env.sh  kubot_remove_upstart.sh
kubot/launch/: joystick.launch  keyboard_teleop.launch
kubot/scripts/: calibrate_linear.py  launch_demo.py  marker_server.py  navigation_goal.py
kubot_bringup/: CMakeLists.txt  package.xml
kubot_bringup/cfg/: kubot_parameter.cfg
kubot_bringup/include/kubot_bringup/: data_holder.h  queue.h  serial_transport.h  simple_dataframe_master.h  transport.h  variable_queue.h
kubot_bringup/launch/: apollo_bringup_smoother.launch  astra.launch  bringup_with_imu.launch  bringup_with_imu2.launch  robot_with_imu.launch  xtion.launch
kubot_bringup/params/: base_params_with_imu.yaml
kubot_bringup/src/: base_driver_config.cpp  main.cpp  serial_transport2.cpp
kubot_description/: CMakeLists.txt
kubot_description/urdf/: apollo.urdf  apolloX.urdf
kubot_imu/: CMakeLists.txt
kubot_imu/include/kubot_imu/: kubot_imu.h
kubot_imu/launch/: imu_ahrs.launch
kubot_imu/src/: kubot_imu_node.cpp
kubot_msgs/: package.xml
ros_ws/devel/: .catkin  .rosinstall
ros_ws/devel/include/kubot/: CalibrateAngularConfig.h  CalibrateLinearConfig.h
ros_ws/devel/include/kubot_bringup/: kubot_driverConfig.h
ros_ws/devel/include/kubot_msgs/: BatteryVoltage.h  RawImu.h
ros_ws/devel/lib/imu_filter_madgwick/: imu_filter_node
ros_ws/devel/lib/kubot_bringup/: kubot_driver
ros_ws/devel/lib/kubot_imu/: kubot_imu
ros_ws/devel/lib/pkgconfig/: imu_filter_madgwick.pc  kubot.pc  kubot_3dsensor.pc  kubot_bringup.pc  kubot_description.pc  kubot_imu.pc  kubot_led.pc  kubot_msgs.pc  kubot_navigation.pc  kubot_slam_3d.pc  neuronbot2_led.pc  pibot_lidar.pc  rplidar_ros.pc  simple_follower.pc  ydlidar.pc
ros_ws/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
ros_ws/devel/lib/ydlidar/: ydlidar_client  ydlidar_node
ros_ws/devel/share/imu_filter_madgwick/cmake/: imu_filter_madgwickConfig.cmake
ros_ws/devel/share/kubot/cmake/: kubotConfig.cmake
ros_ws/devel/share/kubot/docs/: CalibrateAngularConfig-usage.dox  CalibrateLinearConfig-usage.dox
ros_ws/src/kubot/: CMakeLists.txt  package.xml
ros_ws/src/kubot/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg
ros_ws/src/kubot/launch/: joystick-holonomic.launch  navigation_multi_a.launch  navigation_multi_demo.launch
ros_ws/src/kubot/scripts/: calibrate_angular.py  calibrate_linear.py  get_pos_demo.py  marker_server.py  navigation_goal.py  navigation_multi_goals.py  teleop_twist_keyboard.py  transform_utils.py
ros_ws/src/kubot_bringup/: package.xml
ros_ws/src/kubot_bringup/launch/: box_filter_example.launch  bringup.launch  bringup_without_odom.launch  kinectV1.launch  kinectV2.launch  model.launch  robot.launch  robot_with_imu.launch  robot_without_odom.launch  rplidar-s1.launch  rplidar.launch  view_model.launch
ros_ws/src/kubot_bringup/params/: base_params.yaml  base_params_with_imu.yaml  base_params_without_odom.yaml  box_filter.yaml
ros_ws/src/kubot_bringup/scripts/: odom_ekf.py
ros_ws/src/kubot_bringup/src/: base_driver.cpp  base_driver_config.cpp  data_holder.cpp  serial_transport.cpp  serial_transport2.cpp  simple_dataframe_master.cpp
ros_ws/src/kubot_description/urdf/: hades.urdf
ros_ws/src/kubot_imu/: package.xml
ros_ws/src/kubot_imu/scripts/: simple_magnometer_calibration
ros_ws/src/kubot_imu/src/: kubot_imu.cpp
ros_ws/src/kubot_led/: CMakeLists.txt
ros_ws/src/kubot_led/launch/: led_control.launch
ros_ws/src/kubot_led/scripts/: led_control.py  led_test.py
ros_ws/src/kubot_msgs/: CMakeLists.txt
ros_ws/src/kubot_msgs/msg/: BatteryPower.msg  BatteryVoltage.msg
ros_ws/src/kubot_navigation/: CMakeLists.txt
ros_ws/src/kubot_navigation/config/: frontier_exploration.yaml
ros_ws/src/kubot_navigation/launch/: cartographer.launch  depth_camera_gmapping.launch  depth_camera_nav.launch  frontier_exploration.launch  gmapping.launch  gmapping_with_imu.launch  gmapping_with_imu_cam_led.launch  gmapping_with_imu_with_cam.launch  hector_mapping.launch  hector_mapping_without_odom.launch  karto_slam.launch  nav.launch  nav_with_imu.launch  save_map.launch  view_nav.launch
ros_ws/src/kubot_navigation/params/: costmap_common_params_apollo.yaml  costmap_common_params_apolloX.yaml  costmap_common_params_hades.yaml  dwa_local_planner_params_hades.yaml  global_costmap_params.yaml
ros_ws/src/kubot_slam_3d/: CMakeLists.txt
ros_ws/src/kubot_slam_3d/launch/: astra.launch  d435i.launch  rtabmap.launch  view.launch  xtion.launch
ros_ws/src/kubot_tools/kubot_3dsensor/: .gitignore  CMakeLists.txt  package.xml
ros_ws/src/kubot_tools/kubot_lidar/: CMakeLists.txt
ros_ws/src/kubot_tools/simple_follower/: CMakeLists.txt  package.xml
ros_ws/src/rplidar_ros/launch/: rplidar_s1.launch
rules/: kubot.rules
tools/: cartographer.tar.bz2  jetson_nano_create_ap.sh  kubot_create_swap.sh  kubot_install_ros.sh  kubot_view_env.sh
tools/create_ap/: create_ap_start.sh
tools/kubot_ros_tool/kubot_simulator/: CMakeLists.txt  package.xml
tools/kubot_ros_tool/kubot_simulator/launch/: bringup.launch  nav.launch
tools/kubot_ros_tool/led_strip/: CMakeLists.txt  README.txt  package.xml
tools/kubot_ros_tool/led_strip/launch/: keyboard_led.launch
tools/kubot_ros_tool/led_strip/msg/: button.msg
tools/kubot_ros_tool/led_strip/scripts/: led_keyboard.py  led_test_mode.py
tools/kubot_ros_tool/simple_follower/: package.xml
tools/kubot_ros_tool/simple_follower/scripts/: follower.py  laserTracker.py
tools/kubot_ros_tool/ws281x/examples/: example.py  rad.py
tools/kubot_ros_tool/ws281x/launch/: example.launch
tools/kubot_upstart/: .kubot_start.sh.swp  kubot.service  kubot_restart.sh  kubot_start.sh  kubot_stop.sh  kubotenv
tools/pypibot/pypibot/: __init__.py  assistant.py  configer.py  daemon.py  err.py  log.py
tools/pypibot/transport/: dataholder.py  main.py  params.py  transport.py
tools/rpi_ws281x/: main.c
(+76 files in other folders)
