<?xml version="1.0"?>
<package format="2">
  <name>kubot</name>
  <version>0.0.0</version>
  <description>
  The kubot package
  ROS launch script for starting the KUBOT
  </description>

  <author>KUBOT</author>
  <!-- KUBOT ROS  -->
  <maintainer email="YunHong.Wang@ShaYangYe.com">Yun-Hong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
  