<?xml version="1.0"?>
<package format="2">
  <name>kubot_imu</name>
  <version>0.0.0</version>
  <description>The kubot_imu package</description>

  <author>KUBOT</author>
  <!-- KUBOT ROS  -->
  <maintainer email="YunHong.Wang@ShaYangYe.com">Yun-Hong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>kubot_msgs</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>