<?xml version="1.0"?>
<package format="2">
  <name>kubot_simulator</name>
  <version>0.0.0</version>
  <description>The kubot_simulator package</description>
  <!-- KUBOT ROS  -->
  
  <maintainer email="apollo@todo.todo">apollo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
